feat: bindings, crud, swaggo docs
