# campaigner/routes/routes.go
@@ -1,17 +1,14 @@
 package routes
 
 import (
+	"github.com/cs301-itsa/project-2022-23t2-g1-t7/campaigner/internal"
 	"github.com/gin-gonic/gin"
 	"net/http"
-	"github.com/cs301-itsa/project-2022-23t2-g1-t7/campaigner/internal"
 )
 
-// PingExample godoc
-// @Summary healthcheck example
-// @Schemes
+// Health godoc
+// @Summary health
 // @Description health check
-// @Tags example
-// @Accept json
 // @Produce json
 // @Success 200 {string} OK
 // @Router /health [get]
@@ -23,9 +20,11 @@ func InitialiseRoutes(router *gin.Engine) {
 	router.GET("/health", Health)
 
 	campaign := router.Group("/campaign")
-	campaign.POST("/",internal.CreateCampaign)
-	campaign.GET("/",internal.GetCampaigns)
-	campaign.GET("/:id",internal.GetCampaignById)
-
-	// add your other routes accordingly
+	{
+		campaign.GET("/", internal.GetCampaigns)
+		campaign.GET("/:id", internal.GetCampaignById)
+		campaign.POST("/", internal.CreateCampaign)
+		campaign.PUT("/:id", internal.UpdateCampaign)
+		campaign.DELETE("/:id", internal.DeleteCampaign)
+	}
 }
